# isdnutils-debian

./: CAUSE.1tr6  CREDITS  Makefile  Makefile.in  README  README.mgetty  README.tcpdump  chkroot.sh  configure  isdnutils_2.0.orig.tar.gz.delta  isdnutils_2.0.orig.tar.gz.id  isdnutils_2.1.beta1-15.tar.gz.delta  isdnutils_2.1.beta1-15.tar.gz.id  isdnutils_3.0.orig.tar.gz.delta  isdnutils_3.0.orig.tar.gz.id  isdnutils_3.10.20070306.orig.tar.gz.delta  isdnutils_3.10.20070306.orig.tar.gz.id  isdnutils_3.12.20071127.orig.tar.gz.delta  isdnutils_3.12.20071127.orig.tar.gz.id  isdnutils_3.1pre4.orig.tar.gz.delta  isdnutils_3.1pre4.orig.tar.gz.id  isdnutils_3.22.orig.tar.bz2.delta  isdnutils_3.22.orig.tar.bz2.id  isdnutils_3.24.orig.tar.bz2.delta  isdnutils_3.24.orig.tar.bz2.id  isdnutils_3.25+dfsg1.orig.tar.bz2.delta  isdnutils_3.25+dfsg1.orig.tar.bz2.id  isdnutils_3.25.orig.tar.bz2.delta  isdnutils_3.25.orig.tar.bz2.id  isdnutils_3.3.0.20040728.orig.tar.gz.delta  isdnutils_3.3.0.20040728.orig.tar.gz.id  isdnutils_3.3.0.20041110.orig.tar.gz.delta  isdnutils_3.3.0.20041110.orig.tar.gz.id  isdnutils_3.6.2005-01-03.orig.tar.gz.delta  isdnutils_3.6.2005-01-03.orig.tar.gz.id  isdnutils_3.7.2005-07-09.orig.tar.gz.delta  isdnutils_3.7.2005-07-09.orig.tar.gz.id  isdnutils_3.8.2005-12-06.orig.tar.gz.delta  isdnutils_3.8.2005-12-06.orig.tar.gz.id  isdnutils_3.9.20060704+dfsg.1.orig.tar.bz2.delta  (+9 more)
FAQ/: Makefile.in  configure  configure.in
areacode/: Makefile.am  Makefile.in  configure  configure.in
areacode/make/: linux.mak
avmb1/: Makefile.am  Makefile.in  avmcapictrl.c  configure  configure.in
capi20/: .in  Makefile.am  Makefile.in  aclocal.m4  capi20.c  capi20.h  capi_defs.h  capi_mod.h  capi_mod_fritzbox.c  capi_mod_rcapi.c  capi_mod_std.c  capidyn.c  capiutils.h  config.h.in  configure  configure.ac  conftest  convert.c
capifax/: Makefile.in  aclocal.m4  capifax.1  capifax.c  capifaxrcvd.8  capifaxrcvd.c  config.h.in  configure
capiinfo/: Makefile.in  config.h.in  configure  configure.tmp
capiinit/: Makefile.in  aclocal.m4  capi.conf  capiinit.8  capiinit.c  config.h.in  configure  configure.in
debian/: 00-ipppd  CONFIG  HOWTO  README.Debian  README.HiSax  README.MPPP  README.debian  README.multiple-ipppd  README.old  README.source  TODO  TODO.Debian  TODO.de  XXX-control  auth-down  auth-up  callerid.conf  capi.conf  capiutils.blacklist  capiutils.default  capiutils.dirs  capiutils.init  capiutils.install  capiutils.install.in  capiutils.manpages  capiutils.modprobe  capiutils.postinst  changelog  changelog.isdnlog  changelog.vbox  cisco-config  clean  conffiles  control  copyright  copyright.ipppd  cron.weekly  device.DEVICE  device.DEVICE.md5sum  dirs  (+210 more)
divertctrl/: divertctrl.c  divertctrl.man.in
doc/: .4.html  .8.html  Configure.help  Makefile  Makefile.am  Makefile.in  configure  configure.in  isdnctrl.8  pcbitctl.8  ttyI.4
eicon/: Makefile.in  configure  configure.in
etc/: rc.isdn  rc.isdn.syncppp  rc.isdn.syncppp.1
icn/: DIPSWITCHES  DIPSWITCHES.ger  Makefile  Makefile.am  Makefile.in  README  README.ger  configure  configure.in  icnctrl.c
icn/RCS/: icnctrl.c,v
imon/: Makefile.am  Makefile.in  acconfig.h  config.h.in  configure  configure.in
imontty/: Makefile.am  Makefile.in  configure  configure.in  imontty.8  imontty.8.in  imontty.c  mkinstalldirs
ipppd/: Makefile.am  Makefile.in  acconfig.h  auth.c  ccp.c  chap_ms.c  config.h.in  configure  configure.in  ipppd.8  ipppd.h  lcp.c  main.c  options.c  sys-linux.c
ipppstats/: Makefile.am  Makefile.in  configure  configure.in  ipppstats.8  ipppstats.c
iprofd/: Makefile.am  Makefile.in  configure  configure.in  iprofd.c
isdn/: Makefile  iprofd.c  isdnctrl.c
isdnctrl/: Makefile.am  Makefile.in  acconfig.h  (+8 more)
isdnlog/: ChangeLog  Makefile.am  Makefile.in  acconfig.h  config.h.in  configure  configure.in
isdnlog/connect/: Makefile.am  Makefile.in  connect.c  socket.h
isdnlog/doc/: Makefile.am  Makefile.in  callerid.conf.man  isdn.conf.man  isdnformat.man  isdnlog.man  isdnlog.users.man  isdnrep.man  isdntime.man
isdnlog/isdnconf/: Makefile.am  Makefile.in  isdnconf.8
isdnlog/isdnlog/: Makefile.am  Makefile.in  callerid.conf.5.in  functions.c  isdn.conf.5.in  isdnlog.8.in  isdnlog.c  isdnlog.h  processor.c  server.c  start_prog.c  takt_de.c
isdnlog/isdnrep/: Makefile.am  Makefile.in  isdnrep.c  rep_main.c
isdnlog/misc/: Makefile.am  Makefile.in  cheap.c  messages.c
isdnlog/samples/: isdn.conf  isdn.conf.at  isdn.conf.de  isdn.conf.lu  isdn.conf.nl  isdn.conf.no  isdn.conf.pl
isdnlog/tools/: Makefile.am  Makefile.in  isdnconf.c  tools.c  tools.h  tools_de.c
isdnlog/tools/cdb/: config.cache  config.h  config.status
isdnlog/tools/dest/: configure
isdnlog/tools/zone/: configure  configure.in  mkzonedb.man.in
lib/: Makefile.am  Makefile.in  conffile.c  configure  configure.in  isdntools.c  libisdn.h
lib/avon/: Makefile.am  Makefile.in  createDB.h
loop/: Makefile.am  configure.in
pcbit/: Makefile  Makefile.am  Makefile.in  configure  configure.in  pcbitctl.c  pcbitctrl.8
teles/: Makefile  Makefile.am  Makefile.in  configure  configure.in
vbox/: CHANGES  Makefile.am  Makefile.in  acconfig.h  aclocal.m4  configure  configure.in
vbox/doc/: Makefile.am  Makefile.in  autovbox.man  rmdtovbox.man  vbox.conf.man  vbox.man  vboxbeep.man  vboxconvert.man  vboxctrl.man  vboxd.conf.man  vboxd.man  vboxgetty.conf.man  vboxgetty.man  vboxmail.man  vboxmode.man  vboxplay.man  vboxrc.man  vboxtcl.man  vboxtoau.man
vbox/doc/de/: Makefile.am  Makefile.in  vbox.sgml  vbox.txt
vbox/examples/: beep.msg.example  beep.msg.example.uu
vbox/src/: Makefile.am  Makefile.in  config.h.in  libvbox.c  lock.c  log.c  log.h  modem.c  rcgetty.c  script.c  script.h  streamio.c  vbox.c  vboxbeep.c  vboxconvert.c  vboxconvert.h  vboxd.c  vboxgetty.c
vbox/utils/: Makefile.in  mkdev  vboxmail.in  vboxplay.in
xisdnload/: Makefile.am  Makefile.in  configure  configure.in  xisdnload.c  xisdnload.man
xmonisdn/: Makefile.am  Makefile.in  Net.c  NetP.h  configure  configure.in  xmonisdn.man  xmonisdn.man.in
(+315 files in other folders)
