dnl Process this file with autoconf to produce a configure script.
AC_INIT(de-i4l-faq)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PATH_PROG(C_ZIP, zip,,$PATH:/usr/sbin:/sbin:/usr/local/bin)
AC_PATH_PROG(C_GZIP, gzip,,$PATH:/usr/sbin:/sbin:/usr/local/bin)
AC_PATH_PROG(C_PERL, perl,,$PATH:/usr/sbin:/sbin:/usr/local/bin)

dnl Check where to install.
AC_ARG_WITH(faqdir,[  --with-faqdir=DIR         set installation directory], \
	TARGET_DIR="$withval",
	TARGET_DIR='${prefix}/doc/isdn4k-utils' )

AC_SUBST(TARGET_DIR)
AC_OUTPUT(Makefile)
