AUTOMAKE_OPTIONS=foreign no-dependencies
MAINTAINERCLEANFILES=install-sh missing mkinstalldirs aclocal.m4 \
        configure Makefile.in
noinst_LIBRARIES=libareacode.a
libareacode_a_SOURCES= actest.c acvers.c areacode.c areacode.h
areacodedir=@ALIBDIR@
areacode_DATA=areacode.dat
EXTRA_DIST=areacode.doc

