dnl Process this file with autoconf to produce a configure script.
AC_INIT(avmcapictrl.c)
AM_INIT_AUTOMAKE(avmb1,2.1b1)

AC_ARG_WITH(include,\
        [  --with-include=DIR              add include (for kernel headers)],
        [ CPPFLAGS=" $CPPFLAGS -I$withval" ] )         

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h unistd.h)
AC_CHECK_HEADERS(linux/isdn.h linux/b1lli.h linux/capi.h ,,
	AC_MSG_ERROR("Missing linux/isdn.h. Kernel source installed?"))

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_CHECK_FUNCS(mmap)

AC_OUTPUT(Makefile)
