dnl Process this file with autoconf to produce a configure script.
AC_INIT(capiinit.c)
AM_INIT_AUTOMAKE(capiinit, 1.0)
AC_PREFIX_DEFAULT(/usr)

DATADIR=${CONFIG_DATADIR:-"/usr/lib/isdn"}
DATADIR=`eval echo $datadir`
AC_DEFINE_UNQUOTED(DATADIR,"$datadir")

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(linux/capi.h,,
	AC_MSG_ERROR("Missing $ac_hdr. Kernel source installed?"))
dnl not used AC_CHECK_HEADERS(capi20.h)

AC_ARG_WITH(datadir,
        [  --with-datadir=DIR      Set data directory [/usr/lib/isdn]],
        datadir=$withval; AC_DEFINE_UNQUOTED(DATADIR,"$withval"))

dnl Checks for typedefs, structures, and compiler characteristics.

AC_SUBST(INSTALL)
AC_SUBST(CONFIG_SBINDIR)
AC_SUBST(CONFIG_MANDIR)
AC_SUBST(DATADIR)
dnl AM_CONFIG_HEADER(config.h)
AC_OUTPUT(Makefile)
