dnl Process this file with autoconf to produce a configure script.
AC_INIT(imontty.c)
AM_INIT_AUTOMAKE(imontty,2.1b1)   

AC_ARG_WITH(include,\
        [  --with-include=DIR              add include (for kernel headers)],
        [ CPPFLAGS=" $CPPFLAGS -I$withval" ] )

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

dnl Checks for header files.
AC_HEADER_STDC

dnl Check for linux/isdn.h, give up if not found.
AC_CHECK_HEADERS(linux/isdn.h,,
	AC_MSG_ERROR("Missing linux/isdn.h. Kernel source installed?"))

AC_OUTPUT(Makefile)
