dnl Process this file with autoconf to produce a configure script.
AC_INIT(ipppd.h)
AM_INIT_AUTOMAKE(ipppd,i2.2)
AM_CONFIG_HEADER(config.h)

AC_ARG_WITH(include,\
	[  --with-include=DIR     	   add include (for kernel headers)],
        [ CPPFLAGS=" $CPPFLAGS -I$withval" ] )

AC_ARG_ENABLE(mschap,\
	[  --enable-mschap		enable mschap support ], \
	[case "${enableval}" in
	       yes) mschap=true
		    AC_DEFINE(USE_MSCHAP) LIBS="$LIBS -ldes"
		    ;;
	       no)  mschap=false ;;
	       *) AC_MSG_ERROR(bad value ${enableval} for --enable-mschap) ;;
     	 esac],
	[mschap=false])

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC

dnl Checks for libraries.
AC_CHECK_LIB(bsd, daemon)
AC_CHECK_LIB(crypt, crypt)
AC_CHECK_LIB(des, des_ecb_encrypt, HAVE_LIBDES=1; AC_DEFINE(HAVE_LIBDES))
 
dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h paths.h sys/file.h sys/ioctl.h sys/time.h syslog.h unistd.h)
AC_CHECK_HEADER(shadow.h, HAVE_SHADOW_H=1; AC_DEFINE(HAVE_SHADOW_H))
 
dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_HEADER_TIME
AC_TYPE_UID_T
 
dnl Checks for library functions.
AC_TYPE_GETGROUPS
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(gethostname gettimeofday select socket strdup strerror strtol strtoul uname)

AC_SUBST(HAVE_LIBDES)
AC_SUBST(HAVE_SHADOW_H)       
AC_OUTPUT(Makefile)
