dnl Process this file with autoconf to produce a configure script.
AC_INIT(isdnlog/isdnlog.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(isdnlog,2.99)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl Checks for libraries.
AC_CHECK_LIB(dbm, dbm_open, DBMLIB=-ldbm,
	AC_CHECK_LIB(gdbm, gdbm_open, DBMLIB=-lgdbm,
		AC_MSG_ERROR("Missing \(g\)dbm library")))

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h limits.h sys/ioctl.h sys/time.h syslog.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for C library functions.
AC_PROG_GCC_TRADITIONAL
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_FUNC_UTIME_NULL
AC_CHECK_FUNCS(mktime select socket stime strdup strerror strftime strstr strtod strtol)

dnl options 

AC_ARG_WITH(include,\
        [  --with-include=DIR              add include (for kernel headers)],
        [ CPPFLAGS=" $CPPFLAGS -I$withval" ] )
      

AC_ARG_WITH(i4lconfdir, \
	[  --with-i4lconfdir=DIR	global isdn configuration dir [/etc/isdn] ], \
	[ I4LCONFDIR=${withval} ], \
	[ I4LCONFDIR="/etc/isdn" ] )

AC_ARG_WITH(alib, \
	[  --with-arealib	area lib : areacode or avon [ areacode ] ], \
	[ ALIB=${withval} ], \
	[ ALIB=areacode ] )

AC_ARG_WITH(alibdir, \
	[  --with-arealibdir	DIR with areacode/avon data files [ /usr/lib/isdn ] ], \
	[ ALIBDIR=${withval} ], \
	[ ALIBDIR=${prefix}/lib/isdn ] )

AC_ARG_WITH(postgres=DIR, \
	[  --with--postgres=DIR		use postgres include and lib from DIR ], \
	[ CPPFLAGS="$CPPFLAGS -I${withval}/include"  \
	  LIBS="$LIBS -L${withval}/lib" ] )

AC_ARG_ENABLE(postgres, \
	[  --enable-postgres		enable postgres loggin [ off ] ], \
	[ AC_EGREP_HEADER(PGconn,libpq-fe.h, \
		  AC_DEFINE_UNQUOTED(POSTGRES,1)) ] )

AC_ARG_WITH(charge,
	[  --with-charge=XX        Set country specific chargeinfo [DE]],
	[ case "$withval" in
	CH)
		AC_DEFINE(ISDN_CH)
		;;
	NL)
		AC_DEFINE(ISDN_NL)
		;; 
	esac ] )

ALINK="-L`pwd`/../lib/avon -lavon -L`pwd`/../areacode -lareacode $DBMLIB" 

AC_SUBST(I4LCONFDIR)
AC_SUBST(ALIBDIR)
AC_SUBST(ALINK)
AC_OUTPUT(Makefile doc/Makefile tools/Makefile connect/Makefile misc/Makefile \
	isdnconf/Makefile isdnrep/Makefile isdnlog/Makefile)
