dnl Process this file with autoconf to produce a configure script.
AC_INIT(libisdn.h)
AM_INIT_AUTOMAKE(libisdn,2.1b1)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_ARG_WITH(alibdir, \
	[  --with-arealibdir	DIR with areacode/avon data files [ /usr/lib/isdn ] ], \
	[ ALIBDIR=${withval} ], \
	[ ALIBDIR='${prefix}/lib/isdn' ] )

AC_SUBST(ALIBDIR)
AC_OUTPUT(Makefile avon/Makefile )
