dnl Process this file with autoconf to produce a configure script.
AC_INIT(convhexbin.c)
AM_INIT_AUTOMAKE(pcbit,2.1b1)

AC_ARG_WITH(kernel,\
        [  --with-kernel=DIR		location of kernel source],
        [ KERNEL="$withval" ] )

AC_ARG_WITH(include,\
        [  --with-include=DIR		add include (for kernel headers)],
        [ CPPFLAGS="$CPPFLAGS -I$withval" ] )
 

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/ioctl.h unistd.h)

AC_CHECK_HEADERS(linux/isdn.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_CHECK_FUNCS(strerror)

AC_SUBST(KERNEL)
AC_OUTPUT(Makefile)
