dnl Process this file with autoconf to produce a configure script.
AC_INIT(xisdnload.c)
AM_INIT_AUTOMAKE(xisdnload,2.1b1)

AC_ARG_WITH(include,\
        [  --with-include=DIR		add include (for kernel headers)], \
        [ CPPFLAGS=" $CPPFLAGS -I$withval" ] )

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_LN_S
AC_PATH_XTRA

dnl Checks for libraries.

dnl Checks for header files.
AC_CHECK_HEADERS(sys/time.h)
AC_HEADER_TIME

AC_PROG_GCC_TRADITIONAL
AC_CHECK_FUNCS(gettimeofday strstr)

AC_OUTPUT(Makefile)
