dnl Process this file with autoconf to produce a configure script.
AC_INIT(xmonisdn.c)
AM_INIT_AUTOMAKE(xmonisdn,2.1b1)

AC_ARG_WITH(include,\
        [  --with-include=DIR		add include (for kernel headers)], \
        [ CPPFLAGS=" $CPPFLAGS -I$withval" ] )

AC_ARG_WITH(upcmd,\
	[ --with-upcmd=/path/to/bin	set program to start isdn ], \
	[ AC_DEFINE(NETUP_COMMAND,"$withval") ],  \
	[ AC_DEFINE(NETUP_COMMAND,"/etc/isdn/netup") ] )

AC_ARG_WITH(downcmd,\
	[ --with-downcmd=/path/to/bin	set program to stop isdn ], \
	[ AC_DEFINE(NETDOWN_COMMAND,"$withval") ],  \
	[ AC_DEFINE(NETDOWN_COMMAND,"/etc/isdn/netdown") ] )

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_CC
AC_PROG_LN_S
AC_PATH_XTRA

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(sys/time.h)

AC_HEADER_TIME

AC_CHECK_FUNCS(select)

AC_OUTPUT(Makefile)
